--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,6 @@ server.error.include-message=always
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=namdangduchoang@gmail.com
-spring.mail.password=nambin12
+spring.mail.password=tjqp fhhq dlsp fpqe
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
