--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=nambin12
 
 
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -22,3 +22,13 @@ spring.mail.username=namdangduchoang@gmail.com
 spring.mail.password=tjqp fhhq dlsp fpqe
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
+////note
+////spring boot se tu tao ra loi nma van nen kiem tra lai ( sau khi code hoa thian kiem tra lai doan nay) ( khi ma du lieu cua ban gui len sai vi du nhu @Notblank nma ban khong gui len gia tri gi
+////kiem tra ca xem trong request gui len cai chuoi string co van de gi khong ( vi du nhu ?$#@!)
+//sua ham save cua cac entity ( sua cai created va update)
+//kiem tra lai cac kieu du lieu khi dung request gui len
+///trong product truoc khi cho vao ham them moi thi kiem tra xem la manu vs group kia co ton tai khong truoc neu khong ton tai thi vut ex
+///
